tests/positive/test-success-printbool.rooc
fun main() -> int{
    print_bool(true);
    println();
    print_bool(false);
    return 0;
}