tests/negative/test-fail-struct0.rooc
fun main() -> int {
    return 0;
}

struct Test {
    x:int,
    x:float,
}

